# xibi

./: .gitignore  ARCHITECTURE_REVIEW.md  BACKLOG.md  BUGS_AND_ISSUES.md  CHANGELOG.md  CLAUDE.md  COWORK_AUDIT_2026-03-29.md  COWORK_AUDIT_OPERATIONAL_2026-03-30.md  DEPLOY.md  GEMINI.md  HANDOFF.md  LICENSE  LOCAL_AI_AGENT_ARCHITECTURE.txt  PIPELINE.md  SECURITY.md  WORKFLOW.md  bregger_cli.py  bregger_core.py  bregger_dashboard.py  bregger_heartbeat.py  bregger_shadow.py  bregger_telegram.py  bregger_utils.py  check_table.py  config.example.json  final_surgical_fix.py  fix_react_sync.py  profile.example.json  pyproject.toml  repro_failure.py  restart_dash.py  run_dashboard.py  system_architecture_summary.txt  verify_migration.py  xibi_roadmap_v3.md
.claude/: settings.json
.claude/agents/: code-reviewer.md  trr-reviewer.md
.claude/skills/: ci-iteration.md  code-review.md  trr-review.md
.github/workflows/: ci.yml
MagicMock/mock.config/: 140600069298064  140600069333040  140600073892496  140600087485120  140600094275776
domains/career-ops/: agent.yml
domains/test-echo/: agent.yml
public/: bregger_architecture.md  bregger_reflection_loop.md  bregger_task_layer.md  bregger_tier_escalation.md  bregger_urt.md  bregger_vision.md  comparison_final.md  email_skill_spec.md  openclaw_optimization.md  phase_0_plan.md  ray_delta.md  review_criteria.md  skill_adaptation.md  task.md  xibi_architecture.md  xibi_multistep_loop.md  xibi_roadmap.md  xibi_signal_intelligence.md  xibi_task_layer.md  xibi_vision.md
reviews/: code-quality-2026-03-24.md
reviews/daily/: 2026-03-25-0033.md  2026-03-25-0045.md  2026-03-25-0104.md  (+447 more)
scripts/: calendar_onboard_cli.py  ci-watch.sh  deploy.sh  dev_pressure_test.py  doc_coverage.py  doc_coverage_baseline.txt  fk_audit.py  install_dev_cron.sh  jules_get_source.sh  jules_pr_watcher.sh  jules_session_status.sh  jules_status.sh  jules_trigger.sh  migrate_calendar_envvars.py  model_benchmark.py  prompt_slim_eval.py  setup_workdir.sh  test_deploy_sync.sh  triage_comparison.py  xibi-deploy.service  xibi-deploy.timer  xibi_config_migrate.py  xibi_config_migrate.sh  xibi_cutover.sh  xibi_deploy.sh  xibi_rollback.sh
systemd/: bregger-heartbeat.service  bregger-telegram.service  xibi-autoupdate.service  xibi-autoupdate.timer  xibi-caretaker-onfail.service  xibi-caretaker.service  xibi-caretaker.timer  xibi-ci-watch.service  xibi-ci-watch.timer  xibi-dashboard.service  xibi-heartbeat.service  xibi-oauth-callback.service  xibi-telegram.service
tasks/: ARCHITECTURE-TRACKER.md  EPIC-chief-of-staff.md  EPIC-classification-cleanup.md  EPIC-subagent.md  README.md
templates/: caretaker.html  index.html  subagents.html
tests/: _helpers.py  conftest.py  dump_traces.py  reasoning_benchmark_v2.py  signal_extraction_benchmark.py  test_5tier.py  test_add_event.py  test_approval_gates.py  test_audit.py  test_backfill_contacts_origin.py  test_backfill_email_alias.py  test_backfill_signals.py  test_belief_protection.py  test_bregger.py  test_calendar_context.py  test_calendar_multi_account.py  test_calendar_poller.py  test_calendar_resolver_email_alias.py  test_caretaker_cli.py  test_caretaker_config_drift.py  test_caretaker_dedup.py  test_caretaker_provider_health.py  test_caretaker_pulse.py  test_caretaker_review_freshness.py  test_caretaker_schema_drift.py  test_caretaker_service_silence.py  test_checklist_tools_coverage.py  test_chitchat.py  test_circuit_breaker_coverage.py  test_classification.py  test_classification_new.py  test_classifier.py  test_cleanup.py  test_cli.py  test_cli_doctor.py  test_cli_init.py  test_cli_skill_test.py  test_command_layer.py  test_command_layer_integration.py  test_condensation.py  (+172 more)
xibi/: __init__.py  __main__.py  circuit_breaker.py  cli.py  command_layer.py  condensation.py  config.py  errors.py  executor.py  handles.py  memory.py  observation.py  quality.py  radiant.py  react.py  react.py.bak  router.py  session.py  session.py.bak  shutdown.py  signal_intelligence.py  threads.py  tools.py  tracing.py  types.py
(+497 files in other folders)
