[project]
name = "xibi"
version = "0.1.0"
description = "Your AI assistant, your stack. Local, cloud, or both."
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Daniel Lebron"}
]

dependencies = [
    "requests>=2.31",
    "google-generativeai>=0.8",
    "flask>=3.0",
    "psutil>=5.9",
    "PyYAML>=6.0",
    "jsonschema>=4.20",
    "cryptography>=42.0",
]

[project.scripts]
xibi = "xibi.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-requests>=2.31",
    "types-PyYAML>=6.0",
    "responses>=0.25",        # HTTP mocking for requests library
]
onboarding = [
    "keyring>=24.3",
]

[tool.setuptools]
packages = ["xibi", "xibi.db"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "unit: Fast tests with no external dependencies (default)",
    "integration: Tests requiring mocked providers (run with -m integration)",
    "live: Tests hitting real providers - NEVER run in CI (run with -m live)",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"xibi/__main__.py" = ["E402"]  # imports after function defs — pre-existing pattern in this file

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
exclude = ["xibi/skills/sample\\.bak/"]

[[tool.mypy.overrides]]
module = ["google.generativeai.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["xibi"]
omit = [
    "tests/*",
    "xibi/__main__.py",        # CLI entry point — subprocess init; not unit-testable
    "xibi/skills/sample.bak/*",  # backup skill templates, not production code
]

[tool.coverage.report]
fail_under = 80
show_missing = true
